--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ img {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 3rem;
-  /* text-align: justify; */
+  justify-content: center;
 }
 
 
