--- a/css/entrar.css
+++ b/css/entrar.css
@@ -10,7 +10,7 @@
   }
 
   body {
-    background-image: url(../img/energia-limpa-ca-edited.jpg);
+    background-image: url(../img/Energia-verde.jpg);
     background-size: 100%;
     /* width: 100%; */
   }
