--- a/css/entrar.css
+++ b/css/entrar.css
@@ -1,6 +1,6 @@
 * {
-    margin: 0 auto;
-    padding: 0 auto;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
     /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     scroll-behavior: smooth;
@@ -10,9 +10,12 @@
   }
 
   body {
+    align-items: center;
+    justify-content: end;
+    display: flex;
     background-image: url(../img/Energia-verde.jpg);
+    background-repeat: no-repeat;
     background-size: 100%;
-    /* width: 100%; */
   }
 
   .titulo {
@@ -25,9 +28,9 @@
   }
   
   .parte-login{
-    float: right;
-    background-color: rgba(255, 255, 255, 0.5);
-    height: 953px;
+    
+  background-color: rgba(255, 255, 255, 0.5);
+    height: 100%;
     width: 30%;
   }
 
@@ -44,9 +47,9 @@
   
 .cadastro input[type='email'],
 .cadastro input[type='password'] {
-  width: 60%;
+  /* width: 60%; */
   font-size: 20px;
-  height: 40px;
+  /* height: 40px; */
   padding-left: 15px;
   border-radius: 4px;
   border: 1px solid rgb(67, 141, 44);
