--- a/css/entrar.css
+++ b/css/entrar.css
@@ -1,80 +1,72 @@
-* {
+*{
     margin: 0px;
     padding: 0px;
-    box-sizing: border-box;
-    /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    scroll-behavior: smooth;
-    font-family: Tahoma; */
     font-family: 'Open Sans', sans-serif;
-    scroll-behavior: smooth;
-  }
-
-  body {
-    align-items: center;
-    justify-content: end;
-    display: flex;
-    background-image: url(../img/Energia-verde.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
-  }
-
-  .titulo {
-    /* color: #29bf15; */
-    color: green;
-    text-align: center;
-    font-size: 35px;
-    margin-top: 50px;
-    margin-bottom: 15px;
-  }
-  
-  .parte-login{
-    
-  background-color: rgba(255, 255, 255, 0.5);
-    height: 100%;
-    width: 30%;
-  }
-
-  .caixa{
-    display: flex;
-    align-items: center;
-  }
-
-  .botao{
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-  }
-  
-.cadastro input[type='email'],
-.cadastro input[type='password'] {
-  /* width: 60%; */
-  font-size: 20px;
-  /* height: 40px; */
-  padding-left: 15px;
-  border-radius: 4px;
-  border: 1px solid rgb(67, 141, 44);
 }
 
-input {
-  margin-top: 10px;
+body{
+    height: 100vh;
+    width: 100%;
+    background-image: url('../img/Biomassa-1.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    justify-content: end;
+    display: flex;
+}
+
+.login{
+    background-color: rgba(255, 255, 255, 0.5);
+    height: 100vh;
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.caixa{
+    margin-top: 10px;
+}
+
+.botao{
+    display: flex;
+    justify-content: center;
 }
 
 .botao input[type='submit'] {
-  height: 45px;
-  width: 150px;
-  background-color: rgb(67, 141, 44);
-  color: antiquewhite;
-  font-size: 17px;
-  cursor: pointer;
-  border-radius: 7px;
-  border: rgb(67, 141, 44);
-}
+    margin-top: 20px;
+    height: 45px;
+    width: 150px;
+    background-color: rgb(67, 141, 44);
+    color: antiquewhite;
+    font-size: 17px;
+    cursor: pointer;
+    border-radius: 7px;
+    border: rgb(67, 141, 44);
+  }
+  
+  .botao input:hover{
+    background-color: rgb(67, 141, 44);
+  }
+  
+  input:focus,
+  textarea:focus{
+    outline-color: rgb(67, 141, 44);
+  }
+  
+  .senha,.email{
+    width: 100%;
+    margin-top: 10px;
+    height: 25px;
+      /* width: 60%; */
+    font-size: 1.5vh;
+    /* height: 40px; */
+    border-radius: 4px;
+    border: 1px solid rgb(67, 141, 44);
+  }
 
-.botao input:hover{
-  background-color: rgb(67, 141, 44);
-}
-
-input:focus,
-textarea:focus{
-  outline-color: rgb(67, 141, 44);
-}
+  .titulo{
+    text-align: center;
+    font-size: 35px;
+    color: rgb(67, 141, 44);
+  }
