--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ header {
 
 .banner{
   min-height: 600px;
-  background-image: url('../img/energiarenovavel.webp');
+  background-image: url('../img/energiarenovavel-transformed.webp');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
