--- a/css/post1.css
+++ b/css/post1.css
@@ -20,7 +20,7 @@ header {
 
 .banner{
     min-height: 70vh;
-    background-image: url('../img/solar1.webp');
+    background-image: url('../img/solar1-transformed.webp');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
