--- a/css/entrar.css
+++ b/css/entrar.css
@@ -7,7 +7,7 @@
 body{
     height: 100vh;
     width: 100%;
-    background-image: url('../img/Biomassa-1.jpg');
+    background-image: url('../img/lightbulb.webp');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -16,7 +16,7 @@ body{
 }
 
 .login{
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     height: 100vh;
     width: 30%;
     display: flex;
@@ -26,6 +26,7 @@ body{
 
 .caixa{
     margin-top: 10px;
+    width: 400px;
 }
 
 .botao{
@@ -57,12 +58,13 @@ body{
   .senha,.email{
     width: 100%;
     margin-top: 10px;
-    height: 25px;
-    font-size: 1.5vh;
+    height: 40px;
+    font-size: 2vh;
     border-radius: 4px;
     border: 1px solid rgb(67, 141, 44);
+    padding-left: 15px;
   }
-
+  
   .titulo{
     text-align: center;
     font-size: 35px;
