--- a/css/post1.css
+++ b/css/post1.css
@@ -10,12 +10,51 @@ header {
   }
 
   
-.logo img {
+/* .logo img {
     width: 50px;
     height: 50px;
     margin-top: 15px;
     margin-left: 15px;
   
+  } */
+
+  .menu {
+    float: left;
+  }
+  
+  
+  .menu ul {
+    margin-top: 24px;
+  }
+  
+  
+  .menu li {
+    display: inline-block;
+    padding: 0 10px;
+  }
+  
+  
+  .menu a {
+    display: inline-block;
+    padding: 10px 20px;
+    border-radius: 25px;
+    background-color: #29bf15;
+    /* background-color: green; */
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    transition: background-color 0.2s ease-in-out;
+  }
+  
+  .menu a:hover {
+    background-color: #ffffff;
+  }
+  
+  .menu a:hover {
+    /* color: #29bf15; */
+    color: green;
+    font-weight: normal;
   }
 
 .banner{
