--- a/css/post1.css
+++ b/css/post1.css
@@ -79,14 +79,21 @@ header {
 
 .textoimg1{
     display: flex;
-    margin-left: 50vh;
-    margin-right: 50vh;
+    margin-left: 20vh;
+    margin-right: 20vh;
 }
 
 .textoimg1 texto{
     display: flex;
-    margin-left: 50vh;
-    margin-right: 50vh;
+    margin-left: 20vh;
+    margin-right: 20vh;
+}
+
+.texto {
+  display: flex;
+  align-items: center;
+  text-align: justify;
+  margin-bottom: 30px;
 }
 
 /* rodapé */
