--- a/css/style.css
+++ b/css/style.css
@@ -360,7 +360,7 @@ footer{
 .links-medias{
   flex-direction: end;
   /* margin-top: 60px; */
-  /* padding-bottom: 20px; */
+  padding-bottom: 20px;
 }
 
 .links-medias a{
