--- a/css/entrar.css
+++ b/css/entrar.css
@@ -15,6 +15,63 @@ body{
     display: flex;
 }
 
+/* Menu */
+header {
+  height: 85px;
+  background-color: rgba(255, 255, 255, 0.0);
+  width: 100%;
+}
+
+
+/* .logo img {
+  width: 50px;
+  height: 50px;
+  margin-top: 15px;
+  margin-left: 15px;
+
+} */
+
+.menu {
+  float: left;
+}
+
+
+.menu ul {
+  margin-top: 24px;
+  /* margin-left: 10px; */
+}
+
+
+.menu li {
+  display: inline-block;
+  padding: 0 10px;
+}
+
+
+.menu a {
+  display: inline-block;
+  padding: 10px 20px;
+  border-radius: 25px;
+  background-color: #29bf15;
+  /* background-color: green; */
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.menu a:hover {
+  background-color: #ffffff;
+}
+
+.menu a:hover {
+  /* color: #29bf15; */
+  color: green;
+  font-weight: normal;
+}
+
+/* Login */
 .login{
     background-color: rgba(255, 255, 255, 0.5);
     height: 100vh;
@@ -62,21 +119,11 @@ body{
     font-size: 2vh;
     border-radius: 4px;
     border: 1px solid rgb(67, 141, 44);
-    padding-left: 15px;
+    padding-left: 5px;
   }
   
   .titulo{
     text-align: center;
     font-size: 35px;
     color: rgb(67, 141, 44);
-  }
-
-  header{
-    background-color: aliceblue;
-  }
-
-  a {
-    background-color: aliceblue;
-    justify-content: start;
-    align-items: start;
   }
