--- a/css/post5.css
+++ b/css/post5.css
@@ -59,7 +59,7 @@ header {
 
 .banner{
     min-height: 70vh;
-    background-image: url('../img/solar1-transformed.webp');
+    background-image: url('../img/image-19-transformed.webp');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
