--- a/css/post2.css
+++ b/css/post2.css
@@ -59,7 +59,7 @@ header {
 
 .banner{
     min-height: 70vh;
-    background-image: url('../img/solar1-transformed.webp');
+    background-image: url('../img/energia-eolica56.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
