--- a/css/post1.css
+++ b/css/post1.css
@@ -66,24 +66,16 @@ header {
     color: rgb(67, 141, 44);
 }
 
-.textoimg1{
-    display: flex;
-    margin-left: 20vh;
-    margin-right: 20vh;
-}
-
-.textoimg1 texto{
-    display: flex;
-    margin-left: 20vh;
-    margin-right: 20vh;
-}
-
-.texto {
+.paragrafos {
   display: flex;
-  align-items: center;
-  text-align: justify;
-  margin-bottom: 30px;
+  /* align-items: center;
+  text-align: justify; */
+  margin-bottom: 50px;
   font-size: 23px;
+  flex-direction: column;
+  margin-left: 20vh;
+  margin-right: 20vh;
+  text-align: left;
 }
 
 footer{
