--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
 /*Menu*/
 header {
   display: flex;
+  justify-content: space-between;
   height: 85px;
   background-color: #ffffff;
 }
@@ -29,17 +30,22 @@ header {
 
 .logo {
   float: left;
+  margin: 0px;
+  display: flex;
+  justify-content: space-between;
 }
 
 
 .menu {
   float: right;
+  margin: 0px;
 }
 
 
 .menu ul {
   display: flex;
   margin-top: 24px;
+  padding: 0px;
 }
 
 
@@ -286,6 +292,10 @@ footer {
 }
 
 @media (min-width: 768px) {
+  header{
+    display: flex;
+    justify-content: space-between;
+  }
   .container {
     margin: 10px;
   }
@@ -302,11 +312,23 @@ footer {
   .footer-col {
     padding: 0px;
   }
+  .menu {
+    float: right;
+    margin: 0px;
+  }
+  .logo {
+    float: left;
+    margin: 0px;
+    display: flex;
+    justify-content: space-between;
+  }
+  
 }
 
 @media(min-width: 1024px) {
   header {
     display: flex;
+    justify-content: space-between;
   }
 
   .blocos {
@@ -317,10 +339,36 @@ footer {
     width: 302px;
     height: 219px;
   }
+  .menu {
+    float: right;
+    margin: 0px;
+  }
+  .logo {
+    float: left;
+    margin: 0px;
+    display: flex;
+    justify-content: space-between;
+  }
+  
 }
 @media(min-width: 1440px ){
+  header{
+    display: flex;
+    justify-content: space-between;
+  }
   .bloco-individual img{
     width: 426px;
     height: 300px;
   }
+  .menu {
+    float: right;
+    margin: 0px;
+  }
+  .logo {
+    float: left;
+    margin: 0px;
+    display: flex;
+    justify-content: space-between;
+  }
+  
 }
